overflow correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
     font-family: Arial, sans-serif;
     box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+}
 
 .navbar{
     display: flex;
